--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
 
     <body>
-        <button id="centering" onclick="location.href='mailto:stefan@kexika.de?subject=Support';">Contact us</button>
+        <button id="centering" onclick="location.href='mailto:stefan@kexika.eu?subject=Support';">Contact us</button>
     </body>
 </html>
